--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,13 @@
-/.idea
-/node_modules
+.DS_Store
+.idea
+*.ai
+*.log
+*.pdf
+*.psd
+*.htm
+*.sublime*
+css/*.css
+node_modules/
+public/
+npm-debug.*
+Thumbs.db
