--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "license": "ISC",
   "dependencies": {
     "gulp": "^3.9.1",
-    "gulp-pug": "^3.0.4"
+    "gulp-pug": "^3.0.4",
+    "normalize-scss": "^7.0.1"
   },
   "devDependencies": {
     "browser-sync": "^2.18.8",
