--- a/package.json
+++ b/package.json
@@ -21,29 +21,30 @@
     "remove-svg-properties": "^0.3.3"
   },
   "devDependencies": {
-    "autoprefixer": "^7.2.1",
+    "autoprefixer": "^7.2.6",
     "browser-sync": "^2.18.8",
     "del": "^3.0.0",
-    "gulp-load-plugins": "^1.5.0",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.1",
     "gulp-css-unit": "^1.2.2",
     "gulp-csso": "^3.0.0",
     "gulp-imagemin": "^4.0.0",
     "gulp-jslint": "^1.0.10",
+    "gulp-load-plugins": "^1.5.0",
+    "gulp-plumber": "^1.1.0",
     "gulp-postcss": "^7.0.0",
     "gulp-posthtml": "^3.0.2",
-    "gulp-rename": "^1.2.2",
-    "gulp-plumber": "^1.1.0",
     "gulp-pug": "^3.0.4",
+    "gulp-rename": "^1.2.2",
     "gulp-sass": "^3.1.0",
     "gulp-sass-glob": "^1.0.6",
     "gulp-sourcemaps": "^2.6.1",
     "gulp-svg-sprite": "^1.3.6",
-    "gulp.spritesmith": "^6.2.1",
     "gulp-svgstore": "^6.1.0",
     "gulp-uglify": "^3.0.0",
     "gulp-webp": "^2.3.0",
+    "gulp.spritesmith": "^6.2.1",
+    "postcss": "^6.0.22",
     "postcss-import": "^11.0.0",
     "postcss-url": "^7.3.0",
     "posthtml-include": "^1.1.0",
